@@ -111,26 +111,26 @@ public class SecurityConfiguracao {
         return new BCryptPasswordEncoder();
     }
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuracao = new CorsConfiguration();
-        configuracao.applyPermitDefaultValues();
-        configuracao.setAllowedMethods(
-                Arrays.asList(
-                        HttpMethod.GET.name(),
-                        HttpMethod.POST.name(),
-                        HttpMethod.PUT.name(),
-                        HttpMethod.PATCH.name(),
-                        HttpMethod.DELETE.name(),
-                        HttpMethod.OPTIONS.name(),
-                        HttpMethod.HEAD.name(),
-                        HttpMethod.TRACE.name()));
-
-        configuracao.setExposedHeaders(List.of(HttpHeaders.CONTENT_DISPOSITION));
-
-        UrlBasedCorsConfigurationSource origem = new UrlBasedCorsConfigurationSource();
-        origem.registerCorsConfiguration("/**", configuracao);
-
-        return origem;
-    }
+//    @Bean
+//    public CorsConfigurationSource corsConfigurationSource() {
+//        CorsConfiguration configuracao = new CorsConfiguration();
+//        configuracao.applyPermitDefaultValues();
+//        configuracao.setAllowedMethods(
+//                Arrays.asList(
+//                        HttpMethod.GET.name(),
+//                        HttpMethod.POST.name(),
+//                        HttpMethod.PUT.name(),
+//                        HttpMethod.PATCH.name(),
+//                        HttpMethod.DELETE.name(),
+//                        HttpMethod.OPTIONS.name(),
+//                        HttpMethod.HEAD.name(),
+//                        HttpMethod.TRACE.name()));
+//
+//        configuracao.setExposedHeaders(List.of(HttpHeaders.CONTENT_DISPOSITION));
+//
+//        UrlBasedCorsConfigurationSource origem = new UrlBasedCorsConfigurationSource();
+//        origem.registerCorsConfiguration("/**", configuracao);
+//
+//        return origem;
+//    }
 }
